
Version (CVS) 
-------------

JDO:    Fixed bug 1355: SAP DB will not execute a function that is quoted.
        (bruce - 20030710)

XML:    Added support for "merged" locations. If two or more "consecutive" fields 
        in a class mapping refer to the same "location" they will be now be
        merged under the same element instead of creating a new element. 
        Currently there is no way to specify separate elements (unless you place
        a different field mapping in-between the specified field mappings).
        (kvisco - 20030625) 
 
XML:    Fixed bug 1334: Incorrect unmarshalling using same name, but different "location".
        (kvisco - 20030625)

XML:    Fixed bug 1333: <bind-xml> location attribute does not always work. 
        This issue had to due with not marshalling attribute fields that use 
        the bind-xml location attribute if no element fields used that same
        location. 
        (kvisco - 20030625)

JDO:    Integrated API enhancement to support cache flushing/eviction from
        Vince Adamo [vadamo@vignette.com]. See bug 1091 for details. 

JDO:    Fixed bug 1107. Actually this was fixed in version 0.9.5 by bug 1313
        (Bruce - 20030610)

Version 0.9.5, June 03, 2003
----------------------------

XML:    Fixed bug 1319: Incorrect Java inheritance generated by castorBuilder 
        with extended complex types in choices. Patch submitted by Alan 
        Coleman.
        (kvisco - 20030603)

XML:    Clear the <package> implementation in the binding file and fix bug 
        regarding <namingXML>
        (Arnaud - 20030602)

XML:    Fixed some issues with UTC offsets with DateFieldHandler when 
        timezone had zero offset from UTC during daylight savings.
        patch prodived by Phil Pinel.
        (kvisco - 20030529)

XML:    Fixed code generation for nested groups that can occur more than once and that 
        are the only particle of the group.
        (Arnaud - 20030523)
