@@ -1,0 +1,22 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Mixed content was processed incorrectly when container elements were used</Name>
+	<Author>Arnaud Blandin</Author>
+	<Comment>Regression test case for bug 1358</Comment>
+	<Category>basic capability</Category>
+	<BugFix>
+        <Reporter>Daniel Armbrust[daniel.armbrust@mayo.edu]</Reporter>
+        <Date_Report>2003-07-11</Date_Report>     
+        <Date_Fix>2003-07-30</Date_Fix>
+        <Comment>Container descriptors are filtered when reading text content</Comment>
+    </BugFix>
+
+	<SourceGeneratorTest>
+		<Schema>bug1358.xsd</Schema> 	
+        <Root_Object random="false" dump="true">Base</Root_Object>
+		<UnitTestCase>
+            <Name>Test Generation</Name>
+            <Input>input.xml</Input>
+        </UnitTestCase>
+    </SourceGeneratorTest>
+</TestDescriptor>
